*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.27 ===


=== 1.0.26 ===
* Updated build scripts and dependencies.

=== 1.0.25 ===
* Updated build scripts and dependencies.

=== 1.0.24 ===
* Updated build scripts and dependencies.

=== 1.0.23 ===
* Updated build scripts and dependencies.

=== 1.0.22 ===
* Added maximum tracking option.
* Updated build scripts and dependencies.

=== 1.0.21 ===
* Updated build scripts and dependencies.

=== 1.0.20 ===
* Updated build scripts and dependencies.

=== 1.0.19 ===
* Updated build scripts and dependencies.

=== 1.0.18 ===
* Updated build scripts and dependencies.

=== 1.0.17 ===
* Updated build scripts and dependencies.

=== 1.0.16 ===
* Updated build scripts and dependencies.

=== 1.0.15 ===
* Added measure button and meter line on graph.
* Added possibility to change the thickness of lies on the spectrum graph.
* Updated build scripts and dependencies.

=== 1.0.14 ===
* Added support of Mid/Side analysis for Spectrum analyzer.
* x2 and above version of Spectrum Analyzer now enable analysis for first two
  channels by default.
* Updated build scripts and dependencies.

=== 1.0.13 ===
* Fixed invalid version number.

=== 1.0.12 ===
* Updated build scripts and dependencies.

=== 1.0.11 ===
* Updated build scripts and dependencies.

=== 1.0.10 ===
* Updated build scripts and dependencies.

=== 1.0.9 ===
* Fixed clang warnings.

=== 1.0.8 ===
* Updated build scripts and dependencies.

=== 1.0.7 ===
* Added german translations (contributed by Johannes Guenther).
* Updated build scripts and dependencies.

=== 1.0.6 ===
* Updated plugin metadata (contributed by Dennis Braun).
* Fixed clang warnings.
* Updated dependencies and build scripts.
* Updated build scripts and dependencies.

=== 1.0.5 ===
* Initial release.
